--- a/templates/gameStart.html
+++ b/templates/gameStart.html
@@ -407,52 +407,51 @@
 
         // Populate the category select options
         const continentDisplayNames = {
-            "all": "All Countries",
             "10_most_recognized": "Top 10 Most Recognized Flags",
             "30_most_recognized": "Top 30 Most Recognized Flags",
             "50_most_recognized": "Top 50 Most Recognized Flags",
+            "all": "All Countries",
             "africa": "Africa",
             "asia": "Asia",
             "europe": "Europe",
             "north_america": "North America",
             "south_america": "South America",
             "oceania": "Oceania",
-            "flags_with_unique_shapes": "Flags with Unique Shapes",
+            "asean_countries": "ASEAN Countries",
+            "arab_league": "Arab League",
+            "brics_countries": "BRICS Countries",
+            "caribbean_nations": "Caribbean Nations",
+            "commonwealth_nations": "Commonwealth Nations",
+            "countries_that_drive_on_the_left": "Countries that Drive on the Left",
+            "countries_with_blue_primary_color": "Countries with Blue Primary Color",
+            "countries_with_coastlines_on_multiple_oceans": "Countries with Coastlines on Multiple Oceans",
+            "countries_with_crescent_moon_on_their_flags": "Countries with Crescent Moon on their Flags",
+            "countries_with_crosses_on_their_flags": "Countries with Crosses on their Flags",
+            "countries_with_green_primary_color": "Countries with Green Primary Color",
+            "countries_with_horizontal_stripes_on_their_flags": "Countries with Horizontal Stripes on their Flags",
+            "countries_with_only_one_bordering_country": "Countries with Only One Bordering Country",
+            "countries_with_red_primary_color": "Countries with Red Primary Color",
+            "countries_with_suns_on_their_flags": "Countries with Suns on their Flags",
+            "countries_with_union_jack_in_their_flags": "Countries with Union Jack in their Flags",
+            "countries_with_vertical_stripes_on_their_flags": "Countries with Vertical Stripes on their Flags",
+            "countries_with_white_primary_color": "Countries with White Primary Color",
+            "countries_with_yellow_primary_color": "Countries with Yellow Primary Color",
+            "european_union": "European Union",
             "flags_with_animals": "Flags with Animals",
             "flags_with_stars": "Flags with Stars",
-            "countries_with_tricolor_flags": "Countries with Tricolor Flags",
-            "countries_with_crosses_on_their_flags": "Countries with Crosses on their Flags",
-            "countries_with_crescent_moon_on_their_flags": "Countries with Crescent Moon on their Flags",
-            "countries_with_union_jack_in_their_flags": "Countries with Union Jack in their Flags",
-            "countries_with_suns_on_their_flags": "Countries with Suns on their Flags",
-            "countries_with_vertical_stripes_on_their_flags": "Countries with Vertical Stripes on their Flags",
-            "countries_with_horizontal_stripes_on_their_flags": "Countries with Horizontal Stripes on their Flags",
-            "countries_with_red_primary_color": "Countries with Red Primary Color",
-            "countries_with_green_primary_color": "Countries with Green Primary Color",
-            "countries_with_white_primary_color": "Countries with White Primary Color",
-            "countries_with_blue_primary_color": "Countries with Blue Primary Color",
-            "countries_with_yellow_primary_color": "Countries with Yellow Primary Color",
-            "landlocked_countries": "Landlocked Countries",
-            "island_nations": "Island Nations",
-            "microstates": "Microstates",
-            "countries_with_only_one_bordering_country": "Countries with Only One Bordering Country",
-            "countries_with_coastlines_on_multiple_oceans": "Countries with Coastlines on Multiple Oceans",
-            "opec_members": "OPEC Members",
-            "monarchies": "Monarchies",
-            "olympic_host_nations": "Olympic Host Nations",
-            "g20_countries": "G20 Countries",
-            "commonwealth_nations": "Commonwealth Nations",
-            "brics_countries": "BRICS Countries",
-            "european_union": "European Union",
-            "asean_countries": "ASEAN Countries",
-            "nordic_countries": "Nordic Countries",
-            "caribbean_nations": "Caribbean Nations",
-            "pacific_island_nations": "Pacific Island Nations",
-            "arab_league": "Arab League",
+            "flags_with_unique_shapes": "Flags with Unique Shapes",
             "former_soviet_republics": "Former Soviet Republics",
-            "countries_that_drive_on_the_left": "Countries that Drive on the Left",
+            "g20_countries": "G20 Countries",
+            "island_nations": "Island Nations",
+            "landlocked_countries": "Landlocked Countries",
+            "microstates": "Microstates",
             "newest_countries": "Newest Countries",
+            "nordic_countries": "Nordic Countries",
             "oldest_national_flags": "Oldest National Flags",
+            "olympic_host_nations": "Olympic Host Nations",
+            "opec_members": "OPEC Members",
+            "pacific_island_nations": "Pacific Island Nations",
+            "tricolor_flags": "Countries with Tricolor Flags",
             "us_states": "US States"
         };
 
@@ -527,22 +526,53 @@
         function updateGlobalLeaderboard() {
             // Get the list of categories from the leaderboard.json structure
             const categories = [
-                "all", "10_most_recognized", "30_most_recognized", "50_most_recognized",
-                "africa", "asia", "europe", "north_america", "south_america", "oceania",
-                "flags_with_unique_shapes", "flags_with_animals", "flags_with_stars",
-                "countries_with_tricolor_flags", "countries_with_crosses_on_their_flags",
-                "countries_with_crescent_moon_on_their_flags", "countries_with_union_jack_in_their_flags",
-                "countries_with_suns_on_their_flags", "countries_with_vertical_stripes_on_their_flags",
-                "countries_with_horizontal_stripes_on_their_flags", "countries_with_red_primary_color",
-                "countries_with_green_primary_color", "countries_with_white_primary_color",
-                "countries_with_blue_primary_color", "countries_with_yellow_primary_color",
-                "landlocked_countries", "island_nations", "microstates",
-                "countries_with_only_one_bordering_country", "countries_with_coastlines_on_multiple_oceans",
-                "opec_members", "monarchies", "olympic_host_nations", "g20_countries",
-                "commonwealth_nations", "brics_countries", "european_union", "asean_countries",
-                "nordic_countries", "caribbean_nations", "pacific_island_nations", "arab_league",
-                "former_soviet_republics", "countries_that_drive_on_the_left", "newest_countries",
-                "oldest_national_flags", "us_states"
+                "10_most_recognized",
+                "30_most_recognized",
+                "50_most_recognized",
+                "all",
+                "africa",
+                "arab_league",
+                "asean_countries",
+                "asia",
+                "brics_countries",
+                "caribbean_nations",
+                "commonwealth_nations",
+                "countries_that_drive_on_the_left",
+                "countries_with_blue_primary_color",
+                "countries_with_coastlines_on_multiple_oceans",
+                "countries_with_crescent_moon_on_their_flags",
+                "countries_with_crosses_on_their_flags",
+                "countries_with_green_primary_color",
+                "countries_with_horizontal_stripes_on_their_flags",
+                "countries_with_only_one_bordering_country",
+                "countries_with_red_primary_color",
+                "countries_with_stars",
+                "countries_with_suns_on_their_flags",
+                "countries_with_union_jack_in_their_flags",
+                "countries_with_vertical_stripes_on_their_flags",
+                "countries_with_white_primary_color",
+                "countries_with_yellow_primary_color",
+                "europe",
+                "european_union",
+                "flags_with_animals",
+                "flags_with_stars",
+                "flags_with_unique_shapes",
+                "former_soviet_republics",
+                "g20_countries",
+                "island_nations",
+                "landlocked_countries",
+                "microstates",
+                "monarchies",
+                "newest_countries",
+                "nordic_countries",
+                "north_america",
+                "oceania",
+                "oldest_national_flags",
+                "olympic_host_nations",
+                "opec_members",
+                "pacific_island_nations",
+                "south_america",
+                "us_states"
             ];
 
             let categoryIndex = 0; // To track the current category being processed
