adding globe mode

--- a/templates/gameStart.html
+++ b/templates/gameStart.html
@@ -330,6 +330,7 @@
         <div id="mode-selection">
             <button class="mode-button" onclick="selectMode('solo')">Solo</button>
             <button class="mode-button" onclick="selectMode('learn')">Learn</button>
+            <button class="mode-button" onclick="selectMode('globe')">Globe</button>
         </div>        
 
         <button id="leaderboard-button">Leaderboards</button>
